Feat: MultipartFile 검증 로직 수정
- isEmpty()가 아닌 get.size() == 0으로 파일이 있는지 없는지 검증
- 파일이 없어도 name = "", size = 0으로 들어오기 때문
- 메시지 생성 시 userId와 channelId가 존재하는지 검증